--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -61,4 +61,9 @@
     <string name="amount_of_statements">Amount of statements:</string>
     <string name="go">GO</string>
     <string name="own">Own</string>
+    <string name="logo">logo</string>
+    <string name="sound_on_off_button">Sound on/off button</string>
+    <string name="chosen_category">Category:</string>
+    <string name="false_statement">False</string>
+    <string name="insert_name_hint">Insert name</string>
 </resources>
