--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <!--Menu-->
     <string name="multiplayer">Multiplayer</string>
     <string name="highscore">Highscore</string>
-    <string name="singelplayer">Singelplayer</string>
+    <string name="singleplayer">Singleplayer</string>
     <string name="game_menu">Game Menu</string>
     <string name="play">Play</string>
     <string name="about">About</string>
@@ -57,7 +57,8 @@
     <string name="edit_category">Edit category</string>
     <string name="edit_statement">Edit statement</string>
     <string name="Edit">Edit</string>
-    <string name="amount_of_statements">Amount of statements</string>
+    <string name="amount_of_statements">Amount of statements:</string>
+    <string name="choose_amount_of_statements">Amount of statements</string>
     <string name="chosen_category">Category:</string>
     <string name="go">GO</string>
     <string name="own">Own</string>
@@ -66,5 +67,6 @@
     <string name="true_statement">True</string>
     <string name="false_statement">False</string>
     <string name="insert_name_hint">Insert name</string>
+    <string name="get_ready">GET READY</string>
 
 </resources>
