Add: Answere the opposite-text in coundown

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -71,4 +71,5 @@
     <string name="statements">Statements:</string>
     <string name="points_colon">Points:</string>
     <string name="true_statement">True</string>
+    <string name="opposite">Answere the opposite</string>
 </resources>
