--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -72,4 +72,5 @@
     <string name="true_statement">Sant</string>
     <string name="false_statement">Falskt</string>
     <string name="insert_name_hint">Användarnamn</string>
+    <string name="opposite">Svara svärt om</string>
 </resources>
