Most of Multiplayer function done

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -71,4 +71,6 @@
     <string name="statements">Statements:</string>
     <string name="points_colon">Points:</string>
     <string name="true_statement">True</string>
+    <string name="p1_get_ready">Player 1 get ready!</string>
+    <string name="p2_get_ready">Player 2 get ready!</string>
 </resources>
