--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -74,4 +74,5 @@
     <string name="opposite">Answere the opposite</string>
     <string name="p1_get_ready">Player 1 get ready!</string>
     <string name="p2_get_ready">Player 2 get ready!</string>
+    <string name="correct_answers">Correct answers</string>
 </resources>
