--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -75,4 +75,5 @@
     <string name="opposite">Svara svärt om</string>
     <string name="p1_get_ready">Spelare 1 var beredd!</string>
     <string name="p2_get_ready">Spelare 2 var beredd!</string>
+    <string name="correct_answers">Rätt svar</string>
 </resources>
