--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="profile">Profile</string>
     <string name="result">Result</string>
     <string name="textview_about">Quizale is a quiz game developed by students from ITHS-University. The game is about responding if a statement is true or false, though you must think reversed. You can also add your own statements, if you want: Sweden is a country. True, therefore, the \"correct\" answer is false because you have to think reversed.</string>
-    <string name="points">"Points:"</string>
+    <string name="points">"Points"</string>
 
     <!--Buttons-->
     <string name="handle_statements">Handle statements</string>
@@ -68,7 +68,8 @@
     <string name="false_statement">False</string>
     <string name="insert_name_hint">Insert name</string>
     <string name="get_ready">GET READY</string>
-    <string name="statements">Statements:</string>
+    <string name="statements">Statements</string>
+    <string name="statements_colon">Statements:</string>
     <string name="points_colon">Points:</string>
     <string name="opposite">Answere the opposite</string>
     <string name="p1_get_ready">Player 1 get ready!</string>
