Started a new activity for SMS-function Created base layout in activity_sms.xml

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -79,4 +79,5 @@
     <string name="delete_profile">Delete profile</string>
     <string name="create_profile">Create profile</string>
     <string name="add_profile">Add profile</string>
+    <string name="sms">Send a messge</string>
 </resources>
