--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,5 +78,9 @@
     <string name="delete_profile">Delete profile</string>
     <string name="create_profile">Create profile</string>
     <string name="add_profile">Add profile</string>
+    <string name="sms">Send a message</string>
+    <string name="send">Send</string>
+    <string name="enter_nr">Enter phone number</string>
+    <string name="enter_message">Enter message</string>
 
 </resources>
