Profile selection is moved to CategoryWindowActivity. ResultActivity and CountdownActivity shows now profile name;

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -72,7 +72,7 @@
     <string name="statements_colon">Statements:</string>
     <string name="points_colon">Points:</string>
     <string name="true_statement">True</string>
-    <string name="opposite">Answere the opposite</string>
+    <string name="opposite">Answer the opposite</string>
     <string name="p1_get_ready">Player 1 get ready!</string>
     <string name="p2_get_ready">Player 2 get ready!</string>
     <string name="correct_answers">Correct answers</string>
