--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
     <string name="statements">Statements</string>
     <string name="statements_colon">Statements:</string>
     <string name="points_colon">Points:</string>
-    <string name="opposite">Answere the opposite</string>
+    <string name="opposite">Answer the opposite</string>
     <string name="p1_get_ready">Player 1 get ready!</string>
     <string name="p2_get_ready">Player 2 get ready!</string>
     <string name="correct_answers">Correct answers</string>
