--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -84,4 +84,5 @@
     <string name="enter_message">Enter message</string>
     <string name="enter_nr">Enter phone number</string>
     <string name="send">Send</string>
+    <string name="choose_player">Choose player</string>
 </resources>
