Game is now Games in Strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="own_statements">Own statements</string>
     <string name="geography">Geography</string>
     <string name="science">Science</string>
-    <string name="games">Game</string>
+    <string name="games">Games</string>
     <string name="culture">Culture</string>
 
     <string name="all_categories">All categories</string>
