New Asset and string for expansion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,5 +86,6 @@
     <string name="choose_player">Choose player</string>
     <string name="ready">ready</string>
     <string name="are_you_ready">Are you ready?</string>
+    <string name="expansion_christmas">Expansion Christmas</string>
 
 </resources>
