--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -87,4 +87,5 @@
     <string name="choose_player">Choose player</string>
     <string name="ready">ready</string>
     <string name="are_you_ready">Are you ready?</string>
+    <string name="expansion_christmas">Expansion Christmas</string>
 </resources>
