--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -86,7 +86,7 @@
     <string name="send">Send</string>
     <string name="choose_player">Choose player</string>
     <string name="ready">ready</string>
-    <string name="are_you_ready">Are you ready?</string>
+    <string name="are_you_ready">Next playerAre you ready?</string>
     <string name="expansion_christmas">Expansion Christmas</string>
     <string name="max_number_of_letters_10">Max number of letters: 10</string>
 </resources>
